unpackaged/objects/copado__Pull_Request_Review__c.object
<CustomObject>
	<fields>
		<fullName>copado__Body__c</fullName>
		<label>Body</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Pull_Request__c</fullName>
		<label>Pull Request</label>
		<referenceTo>copado__Pull_Request__c</referenceTo>
		<relationshipName>Pull_Request_Reviews</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Review_Action__c</fullName>
		<label>Review Action</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Review_Id__c</fullName>
		<externalId>true</externalId>
		<label>Review Id</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__URL_Link__c</fullName>
		<formula>IF(
 ISBLANK(copado__Url__c),
 &quot;&quot;,
 HYPERLINK(copado__Url__c, &quot;Go to Review&quot;)
)</formula>
		<label>URL Link</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Url__c</fullName>
		<label>Url</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__User_Avatar_Url__c</fullName>
		<label>User Avatar Url</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__User_Avatar__c</fullName>
		<formula>IMAGE(copado__User_Avatar_Url__c, copado__Username__c, 50, 50)</formula>
		<label>User Avatar</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Username__c</fullName>
		<label>Username</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<label>Pull Request Review</label>
	<nameField>
		<displayFormat>Review-{00000}</displayFormat>
		<label>Pull Request Review Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Pull Request Reviews</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>